Send kafka message for resetting password to notification-service which sends email.